loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:4: error: not found: value gacuhe
  gacuhe()
  ^