loopfor.LoopStairs.scala.code
avance(3)
for(compteur<-0 to 7){
  
  gacuhe()
  avance()
  droite()
  avance()
  
}
avance(3)